# machine-wallet

./: .gitignore  Cargo.toml  README.md
program/: Cargo.toml
program/src/: ed25519.rs  error.rs  instruction.rs  lib.rs  secp256r1.rs  state.rs  threshold.rs  webauthn.rs
program/src/processor/: add_authority.rs  advance_nonce.rs  close_session.rs  close_wallet.rs  create_session.rs  create_wallet.rs  execute.rs  init_pda_account.rs  mod.rs  owner_close_session.rs  provide_webauthn_evidence.rs  remove_authority.rs  revoke_session.rs  self_revoke_session.rs  session_execute.rs  set_threshold.rs
program/tests/: integration.rs
